--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,10 @@
 PORT=3000
 PUBLIC_PATH=public
+POSTGRES_URL=
+POSTGRES_USER=
+POSTGRES_DB=
+POSTGRES_PORT=
+POSTGRES_PASSWORD=
+
+
+NODE_ENV=development
