--- a/package.json
+++ b/package.json
@@ -7,21 +7,33 @@
     "dev": "tsnd --respawn --clear src/app.ts",
     "build": "rimraf ./dist && tsc && npm run prisma:migrate:prod",
     "start": "node dist/app.js",
-    "prisma:migrate:prod": "prisma migrate deploy"
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:migrate:test": "dotenv -e .env.test -- npx prisma migrate deploy",
+    "test": "npm run prisma:migrate:test && jest",
+    "test:watch": "npm run prisma:migrate:test && jest --watch",
+    "test:coverage": "npm run prisma:migrate:test && jest --coverage"
   },
   "keywords": [],
   "author": "Jose",
   "license": "ISC",
   "devDependencies": {
+    "@types/compression": "^1.7.5",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.9.1",
+    "@types/supertest": "^6.0.2",
+    "dotenv-cli": "^7.4.4",
+    "jest": "^29.7.0",
     "prisma": "^5.22.0",
     "rimraf": "^6.0.1",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "compression": "^1.7.5",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.21.1"
