--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
 {
-  "exclude": [
-    "node_modules",
-    "dist"
-  ],
-  "include": [ "src" ],
+  // //*Esta configuracion de include es para produccion
+  // "include": ["src/**/*",],
+  // //*Esta configuracion de include es para desarrollo y testing.
+  "include": ["src/**/*", "types","tests/**/*.ts"],
+  // //*Esta configuracion de exclude es para produccion
+  // "exclude": ["node_modules", "**/*.spec.ts","**/*.test.ts"],
+  // //*Esta configuracion de exclude es para desarrollo y testing.
+  "exclude": ["node_modules", "**/*.spec.ts"],
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
@@ -31,7 +34,7 @@
 
     /* Modules */
     "module": "commonjs",                                /* Specify what module code is generated. */
-    "rootDir": "src",                                    /* Specify the root folder within your source files. */
+    // "rootDir": "src",                                    /* Specify the root folder within your source files. */
     // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
